Fix the module