@@ -58,6 +58,7 @@ project.ext.buildDate = new Date()
 sourceCompatibility = "$java_version"
 
 def runArgsValue =  [
+        "--add-opens=java.base/java.lang.reflect=com.jfoenix",
         "--add-opens=java.base/java.lang=opencv",
         "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
         "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
